--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <!-- Meta Description pentru SEO -->
+    <!-- Meta Description for SEO -->
     <meta
       name="description"
-      content="Aleksander Nikolic - Professioneller Fotograf und Videograf in [Dein Standort]. Spezialisiert auf Hochzeiten, Porträts, Events und Unternehmensvideos."
+      content="Prudhvi Adari - Professional Photographer and Videographer based in [Your Location]. Specializing in weddings, portraits, events, and corporate videos."
     />
 
-    <!-- Meta Keywords pentru SEO -->
+    <!-- Meta Keywords for SEO -->
     <meta
       name="keywords"
-      content="Fotograf, Videograf, Hochzeitsfotografie, Porträtfotografie, Eventfotografie, Unternehmensvideos, [Dein Standort], Professionell, Kreativ"
+      content="Photographer, Videographer, Wedding Photography, Portrait Photography, Event Photography, Corporate Videos, [Your Location], Professional, Creative"
     />
 
-    <!-- Open Graph Meta Tags pentru Social Media -->
+    <!-- Open Graph Meta Tags for Social Media -->
     <meta
       property="og:title"
-      content="Aleksander Nikolic - Professioneller Fotograf und Videograf"
+      content="Prudhvi Adari - Professional Photographer and Videographer"
     />
     <meta
       property="og:description"
-      content="Spezialisiert auf Hochzeiten, Porträts, Events und Unternehmensvideos in [Dein Standort]."
+      content="Specializing in weddings, portraits, events, and corporate videos in Visakhapatnam."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/img/Aleks.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/Prudhvi Adari.png" />
     <meta property="og:url" content="https://www.deinedomain.de" />
     <meta property="og:type" content="website" />
 
@@ -35,28 +35,28 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Aleksander Nikolic - Professioneller Fotograf und Videograf"
+      content="Prudhvi Adari - Professional Photographer and Videographer"
     />
     <meta
       name="twitter:description"
-      content="Spezialisiert auf Hochzeiten, Porträts, Events und Unternehmensvideos in [Dein Standort]."
+      content="Specializing in weddings, portraits, events, and corporate videos in Visakhapatnam."
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/img/Aleks.png" />
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <!-- Importarea Fonturilor -->
+    <!-- Font Import -->
     <link
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Manifestul Web App -->
+    <!-- Web App Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Title Pagination -->
-    <title>Prudhvi Adari - Professional Photograper und Videographer</title>
+    <!-- Page Title -->
+    <title>Prudhvi Adari - Professional Photographer and Videographer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
